--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "^18.7.2",
+    "@types/react": "^18.0.17",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "sass": "^1.54.4",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "eslint": "8.21.0",
