--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
     "@types/node": "^18.7.2",
     "@types/react": "^18.0.17",
     "next": "12.2.5",
+    "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "sass": "^1.54.4",
+    "stripe": "^10.2.0",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.5"
   }
