--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/node": "^18.7.2",
     "@types/react": "^18.0.17",
+    "faunadb": "^4.6.0",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
