--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stripe/stripe-js": "^1.35.0",
     "@types/node": "^18.7.2",
     "@types/react": "^18.0.17",
+    "axios": "^0.27.2",
     "faunadb": "^4.6.0",
     "next": "12.2.5",
     "next-auth": "^4.10.3",
