--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "stripe": "stripe.exe listen  --forward-to localhost:3000/api/webhooks"
   },
   "dependencies": {
     "@stripe/stripe-js": "^1.35.0",
@@ -14,7 +15,7 @@
     "@types/react": "^18.0.17",
     "axios": "^0.27.2",
     "faunadb": "^4.6.0",
-    "next": "12.2.5",
+    "next": "^12.2.5",
     "next-auth": "^4.10.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
