--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "stripe": "stripe.exe listen  --forward-to localhost:3000/api/webhooks"
   },
   "dependencies": {
+    "@prismicio/client": "5.1.1",
     "@stripe/stripe-js": "^1.35.0",
     "@types/node": "^18.7.2",
     "@types/react": "^18.0.17",
@@ -17,6 +18,7 @@
     "faunadb": "^4.6.0",
     "next": "^12.2.5",
     "next-auth": "^4.10.3",
+    "prismic-dom": "^2.2.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "@types/next-auth": "^3.15.0",
+    "@types/prismic-dom": "^2.1.1",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.5"
   }
